<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <include
        layout="@layout/appbar"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


    <LinearLayout
        android:id="@+id/buttons_event"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="@color/dark_green"
            app:srcCompat="@drawable/back_button" />
    </LinearLayout>

    <ListView
        android:id="@+id/admin_event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/buttons_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:listitem="@layout/activity_event_adapter" />



</androidx.constraintlayout.widget.ConstraintLayout>