...
                    android:layout_height="34dp"
                    android:background="@color/ivory"
                    android:text=""
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/delete_event"
                    android:layout_width="101dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/signup_red_outline"
                    android:text="Delete Event"
                    android:textAllCaps="false"
...
