...

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editButton"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/userName"
...
